--- a/.github/workflows/image-scan.yml
+++ b/.github/workflows/image-scan.yml
@@ -1,9 +1,10 @@
 name: Image Scan
 
 on:
-  pull_request:
+  push:
     branches:
       - master
+      - '*security*'
 
 jobs:
   anchore:
@@ -17,10 +18,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           checkName: docker-publish
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.sha }}
       - name: Scan Image
         uses: anchore/scan-action@master
         with:
-          image-reference: "pcic/plan2adapt-v2-frontend:${{ github.event.pull_request.head.ref }}"
+          image-reference: "pcic/plan2adapt-v2-frontend:${{ github.sha }}"
           fail-build: true
         if: steps.wait-for-build.outputs.conclusion == 'success'
